Fix footer's shift to right on none state

--- a/packages/chat/src/components/message-status/message-status.css
+++ b/packages/chat/src/components/message-status/message-status.css
@@ -1,6 +1,10 @@
 :host {
-    display: flex;
-    align-items: center;
-    width: 18px;
-    height: 18px;
+  display: flex;
+  align-items: center;
+  width: 18px;
+  height: 18px;
+}
+
+:host(.none) {
+  display: none;
 }
